fixing alignment

--- a/src/styles/services.module.css
+++ b/src/styles/services.module.css
@@ -1,5 +1,4 @@
 .orderedlist {
-    max-width: 375px;
     margin: 0 auto;
-    text-align: left;
+    text-align: center;
 }
